@@ -1,0 +1,41 @@
+[Project]
+name: "libcsplit"
+status: "alpha"
+description: "a library for cross-platform C split string functions"
+features: [
+    "git", "source_package",
+    "cygwin", "gcc", "mingw", "msvscpp",
+    "dpkg", "rpm"]
+
+[source_package]
+url: "https://googledrive.com/host/0B3fBvzttpiiSeE44MVpGWnpNeVU/"
+
+[git]
+url: "https://github.com/libyal/libcsplit.git"
+
+[cygwin]
+build_dependencies: []
+dll_dependencies: [
+    "**TODO describe dependencies**"]
+dll_filename: "cygcsplit-0.dll"
+
+[gcc]
+build_dependencies: []
+static_build_dependencies: []
+
+[mingw]
+build_dependencies: []
+dll_dependencies: [
+    "**TODO describe dependencies**"]
+dll_filename: "libcsplit-1.dll"
+
+[msvscpp]
+build_dependencies: []
+dll_dependencies: []
+
+[dpkg]
+build_dependencies: []
+
+[rpm]
+build_dependencies: []
+
