@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libcsplit.dll\0"
       VALUE "ProductName",		"libcsplit\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libcsplit/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libcsplit/\0"
     END
   END
   BLOCK "VarFileInfo"
