@@ -36,7 +36,7 @@ None
 None
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libcsplit/
+https://github.com/libyal/libcsplit/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
