@@ -3,6 +3,9 @@ TODO
 * complete stand alone version
 * add tests
 
+20140915
+* changes for project site move
+
 20140730
 * updated dpkg files
 
